fix statblocks alignment

--- a/frontend/src/components/StatBlock/style.scss
+++ b/frontend/src/components/StatBlock/style.scss
@@ -5,6 +5,8 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 40px;
+	width: 50%;
+	min-width: 200px;
 	
 	&--value {
 		@extend %font-title;
@@ -17,5 +19,6 @@
 		@extend %font-title;
 		font-size: 28px;
 		font-family: $montserrat;
+		text-align: center;
 	}
 }
